Style: Fixed style overflow and layout of miss classy card

--- a/yamaha-youth/assets/css/miss-classy.css
+++ b/yamaha-youth/assets/css/miss-classy.css
@@ -134,6 +134,29 @@
   bottom: 0;
   margin: auto;
 }
+
+#miss-classy .finalist-identity {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+
+  overflow-x: hidden;
+  overflow-y: hidden;
+  white-space: nowrap;
+  justify-content: center; /* Center the content horizontally */
+  align-items: center; /* Center the content vertically */
+}
+#miss-classy .vote-miss-classy-card .finalist-identity h4,
+#miss-classy .vote-miss-classy-card .finalist-identity span {
+  /* hidden overflow data */
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-transform: uppercase;
+  text-align: center;
+  word-spacing: 0.1rem;
+}
 #miss-classy .vote-miss-classy-card h4 {
   color: #5180a2;
   font-size: 14px;
@@ -240,6 +263,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
 #miss-classy .leaderboard-vote {
   font-family: Outfit, Fredoka, sans-serif;
   font-size: 20px;
@@ -289,6 +313,9 @@
   letter-spacing: 0px;
   color: #5182a2;
 }
+#miss-classy .vote-miss-classy-card .modal img {
+  margin-top: 2rem;
+}
 #miss-classy .vote-miss-classy-card .modal .modal-text-content {
   width: 50%;
   margin-top: 2rem;
@@ -317,6 +344,10 @@
   padding: 8px 20px;
   border: none;
 }
+#miss-classy .modal-header,
+#miss-classy .modal-footer {
+  border: none;
+}
 
 @media (max-width: 1200px) {
   #miss-classy .vote-miss-classy-card {
@@ -326,6 +357,9 @@
 @media (max-width: 997px) {
   #miss-classy .vote-miss-classy-card {
     max-width: 155px;
+  }
+  #miss-classy .vote-miss-classy-card .modal .modal-text-content {
+    width: 75%;
   }
 }
 @media (max-width: 576px) {
@@ -345,6 +379,9 @@
   }
   #miss-classy .miss-classy-vote {
     padding: 0 18px;
+  }
+  #miss-classy .vote-miss-classy-card .modal .modal-text-content {
+    width: 90%;
   }
 }
 
